# docs/swagger.json
@@ -1,7 +1,94 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "DID Backend API",
+        "title": "DID API",
+        "contact": {},
+        "version": "1.0"
     },
-    "paths": {}
+    "host": "localhost:8080",
+    "basePath": "/api/v1",
+    "paths": {
+        "/account-abstraction/create": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account-abstraction"
+                ],
+                "summary": "Create Account Abstraction Wallet",
+                "parameters": [
+                    {
+                        "description": "Create wallet payload",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateWalletRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "$ref": "#/definitions/accountabstractionhandler.Response"
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "accountabstractionhandler.Response": {
+            "type": "object",
+            "properties": {
+                "errors": {
+                    "type": "string"
+                },
+                "returned": {},
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "dto.CreateWalletRequest": {
+            "type": "object",
+            "properties": {
+                "input": {
+                    "$ref": "#/definitions/dto.DeployWalletParamsRequest"
+                },
+                "privKey": {
+                    "type": "string",
+                    "example": "0xabc123..."
+                }
+            }
+        },
+        "dto.DeployWalletParamsRequest": {
+            "type": "object",
+            "properties": {
+                "owners": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "0x111...",
+                        "0x222..."
+                    ]
+                },
+                "salt": {
+                    "type": "string",
+                    "example": "0xaaaaaaaa...(32 bytes hex)"
+                }
+            }
+        }
+    }
 }
