# internal/delivery/http/router/accountabstraction/wallet.go
@@ -10,9 +10,9 @@ import (
 	aauc "github.com/meQlause/go-be-did/internal/usecase/accountabstraction"
 )
 
-func SetupWalletFactoryRoutes(aa fiber.Router, aaRepo repository.AccountAbstractionRepository, cfg *config.Config, bc *blockchain.Blockchain) {
+func SetupWalletRoutes(aa fiber.Router, aaRepo repository.AccountAbstractionRepository, cfg *config.Config, bc *blockchain.Blockchain) {
 	aaUC := aauc.New(aaRepo)
 	aaHandler := aahandler.NewAccountAbstractionHandler(aaUC)
 
-	aa.Post("/create", aaHandler.CreateWallet)
+	aa.Post("/validate-userop", aaHandler.ValidateUserOps)
 }
